# ga-raytracer

./: CMakeLists.txt  README.md
gar/: CMakeLists.txt
gar/include/gar/: Light.hpp  c2gaTools.hpp  drawing.hpp  utils.hpp
gar/src/: Light.cpp
lib/garamon_c2ga/: CMakeLists.txt  README.md  cheatSheet.txt  setup.py
lib/garamon_c2ga/doc/: CMakeLists.txt  Doxyfile-html.cmake
lib/garamon_c2ga/sample/: CMakeLists.txt
lib/garamon_c2ga/sample/src/: main.cpp
lib/garamon_c2ga/src/c2ga/: BasisTransformations.hpp  Constants.hpp  DualCoefficients.hpp  Geometric.hpp  GeometricExplicit.hpp  Inner.hpp  InnerExplicit.hpp  Mvec.cpp  Mvec.hpp  Outer.hpp  OuterExplicit.hpp  PythonBindings.cpp  Utility.hpp
lib/glimac/include/glimac/: Plane.hpp  common.hpp
lib/glimac/src/: SDLWindowManager.cpp  Sphere.cpp
modules/: FindC2GA.cmake  FindGLEW.cmake
src/: CMakeLists.txt  main.cpp
src/shaders/: tex2D.fs.glsl  tex2D.vs.glsl
